<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebSense</string>
    <string name="title_section1">My App Usage</string>
    <string name="title_section2">Trending Apps</string>
    <string name="title_section3">Trending on Web</string>
    <string name="logout">Logout</string>
    <string name="title_section4">Trending Here</string>
    <string name="title_section5">Trending on Web Here</string>
   
    <string name="action_refresh">Refresh</string>
    <string name="sub_section_title1">Today</string>
    <string name="sub_section_title2">This Week</string>
    <string name="sub_section_title3">This Month</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_error">Please fill in all the values before you register.</string>
    <string name="policy_error">Please accept the policy before you continue.</string>
    <string name="server_error">There was an error in contacting the server.</string>
    <string name="emailaddress">Email Address</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="accept_privacy">I provide the concent </string>
    <string name="open_agreement">[Read]</string>

    <string-array name="user_type_array">
        <item>Student</item>
        <item>Researcher</item>
        <item>Employed (Self/Startups)</item>
        <item>Employed (Salaried Class)</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

</resources>